# A2A-ADK

./: __init__.py  __main__.py  agent_executor.py  base_agent_executor.py  client.py  minimal_server.py  pyproject.toml  requirements.txt  setup.py  test_client.py
